@@ -1,6 +1,7 @@
 2016-01-11 David Hohn <david.hohn@cern.ch>
 	* more slimming
 	* not even truth in Nominal tree when doing systematics
+	* move initialisation of tools outside loop of sys trees
 
 2016-01-11 Tamara Vazquez Schroeder <tamara.vazquez.schroeder@cern.ch>
 	* corrected bjet WP to 77 in CheckIsBlinded function
